[tool.poetry]
name = "voxpox"
version = "0.1.0"
description = ""
authors = ["Zhaka <shingis.zhansen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.23.1"
fastapi = "^0.100.0"
jinja2 = "^3.1.2"
attrs = "^23.1.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
